--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./backend
     container_name: ticket-backend
     ports:
-      - "9050:5000"  # Port distant pour éviter conflits
+      - "5050:5050"  # Port de production
     environment:
       - NODE_ENV=production
       - JWT_SECRET=${JWT_SECRET:-votre-cle-secrete-changemoi-123456}
@@ -22,7 +22,7 @@ services:
     build: ./frontend
     container_name: ticket-frontend
     ports:
-      - "9064:3064"  # Port distant pour éviter conflits
+      - "3064:3064"  # Port de production
     depends_on:
       - backend
     restart: unless-stopped
