Configure domain name support

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 3064;
-    server_name localhost;
+    server_name tickets.sedi-ati.com localhost;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -16,7 +16,7 @@ server {
 
     # Proxy API requests to backend
     location /api {
-        proxy_pass http://backend:5000;
+        proxy_pass http://backend:5050;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
