Accept any domain name

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 3064;
-    server_name tickets.sedi-ati.com localhost;
+    server_name _;  # Accepte tous les noms de domaine
 
     root /usr/share/nginx/html;
     index index.html;
