Update nginx domain config

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 3064;
-    server_name _;  # Accepte tous les noms de domaine
+    server_name sedi-tickets.sedi-ati.com;
 
     root /usr/share/nginx/html;
     index index.html;
