Fix database path in Docker volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - SENDGRID_FROM_EMAIL=${SENDGRID_FROM_EMAIL}
       - ADMIN_EMAIL=${ADMIN_EMAIL}
     volumes:
-      - db-data:/app
+      - db-data:/app/data
     restart: unless-stopped
     networks:
       - ticket-network
