Optimisations: sÃ©curitÃ©, performance, lazy loading, compression, rate limiting et amÃ©liorations Docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,15 +5,23 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install
+# Install dependencies (with cache mount for faster builds)
+RUN npm ci --only=production && npm cache clean --force
 
 # Copy application files
 COPY . .
 
+# Create data directory
+RUN mkdir -p /app/data
+
 # Expose port
 EXPOSE 5050
 
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:5050/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
+
 # Start the server
 CMD ["npm", "start"]
+
 
