--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@sendgrid/mail": "^8.0.1",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "sql.js": "^1.13.0"
   },
