--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -2,5 +2,15 @@ node_modules
 npm-debug.log
 .env
 *.md
+.git
+.gitignore
+README.md
+*.log
+.DS_Store
+coverage
+.vscode
+.idea
 dist
+dist-ssr
+
 
