feat: add ticket tracking system and email notifications - Add tracking page for users to follow ticket status - Add /track/:id endpoint (public, no auth) - Add comprehensive email templates - Fix ticket ID retrieval issue - Add trust proxy configuration for rate limiting - Improve user experience with ticket creation feedback - Update nginx configuration for better domain support

--- a/nginx-tickets.conf
+++ b/nginx-tickets.conf
@@ -1,7 +1,8 @@
 server {
     listen 80;
-    server_name sedi-tickets.sedi-ati.com;
-
+    server_name sedi-tickets.sedi-ati.com _;
+    
+    # Default server for IP access and testing
     location / {
         proxy_pass http://localhost:3064;
         proxy_set_header Host $host;
@@ -18,5 +19,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+
 
 
