--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 3064;
-    server_name sedi-tickets.sedi-ati.com;
+    # Nom d'hôte interne principal + ancien domaine public en alias
+    server_name serveurtickets.sedi.local sedi-tickets.sedi-ati.com;
 
     root /usr/share/nginx/html;
     index index.html;
