--- a/nginx-tickets.conf
+++ b/nginx-tickets.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
-    server_name sedi-tickets.sedi-ati.com _;
+    # Nouveau nom d'hôte interne principal + ancien domaine public en alias
+    server_name serveurtickets.sedi.local sedi-tickets.sedi-ati.com _;
     
     # Default server for IP access and testing
     location / {
